# RogueJam

./: CMakeLists.txt  Makefile  README.md  build.bat  build.sh  main.py  menu.py  test.py
Client/: ImportEngine.hpp  Makefile  action.json  main.cpp  scene.json
Client/Game/: Game.cpp  Game.hpp
Engine/: Makefile  README.md
Engine/GameEngine/Component/: ComponentPackage.hpp  IComponent.hpp  type.hpp
Engine/GameEngine/Component/Damage/: Damage.cpp  Damage.hpp
Engine/GameEngine/Component/Health/: Health.cpp  Health.hpp
Engine/GameEngine/Component/Hitbox/: Hitbox.cpp  Hitbox.hpp
Engine/GameEngine/Component/IA/: IA.cpp  IA.hpp
Engine/GameEngine/Component/ID/: ID.cpp  ID.hpp
Engine/GameEngine/Component/Invalid/: Invalid.cpp  Invalid.hpp
Engine/GameEngine/Component/Mobility/: Mobility.cpp  Mobility.hpp
Engine/GameEngine/Component/Player/: Player.cpp  Player.hpp
Engine/GameEngine/Component/Position/: Position.cpp  Position.hpp
Engine/GameEngine/Component/Text/: Text.cpp  Text.hpp
Engine/GameEngine/Component/Visual/: Visual.cpp  Visual.hpp
Engine/GameEngine/Engine/: ClientSession.cpp  ClientSession.hpp  Engine.cpp  Engine.hpp  Window.cpp  Window.hpp
Engine/GameEngine/Engine/EManagers/: EntityManager.cpp  EntityManager.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  KeyboardEnum.hpp  SceneManager.cpp  SceneManager.hpp  SoundManager.cpp  SoundManager.hpp  SystemManager.cpp  SystemManager.hpp  WindowManager.cpp  WindowManager.hpp
Engine/GameEngine/Engine/Network/: Network.cpp  Network.hpp  Serialization.cpp  Serialization.hpp  TcpManager.cpp  TcpManager.hpp  UdpManager.cpp  UdpManager.hpp
Engine/GameEngine/Entity/: Entity.cpp  Entity.hpp  IEntity.hpp
Engine/GameEngine/Scene/: Scene.cpp  Scene.hpp
Engine/GameEngine/System/: Clock.cpp  Clock.hpp  System.cpp  System.hpp
Server/: Makefile  main.cpp
Server/docs/: README.md
Server/include/: ClientManager.hpp  Imports.hpp  Package.hpp  Serialization.hpp  Server.hpp  Transmission.hpp
Server/src/: ClientManager.cpp  Package.cpp  Serialization.cpp  Server.cpp
mapOne/: idk.tmx  present.tsx  present2.tsx
mapThree/: cassé2.tsx  passé.tsx  untitled.tmx
mapTwo/: eau.tsx  maison.tsx  menfou.tsx  present.tmx  present.tsx  route.tsx  terre.tsx  uyhgtfds.tsx  ville.tsx
